--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "watch-sass":"node-sass sass/main.scss public/css/style.css -w",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production&& nodemon server.js"
   },
   "author": "meso tech team",
