--- a/config.env
+++ b/config.env
@@ -3,3 +3,10 @@ NODE_ENV=development
 DATABASE=mongodb+srv://meso_tech:<PASSWORD>@cluster0.ouvs2.mongodb.net/MesoIndia
 DATABASE_PASSWORD=bRBTVfRpAnf9w011
 MONGO_CONNECT_TERMINAL=mongodb+srv://meso_tech:bRBTVfRpAnf9w011@cluster0.ouvs2.mongodb.net/MesoIndia
+
+twoili_number_forgetten=odRvrXkz8cHQUqC7bm3EkirZHsFbYQANLjSYT3l5
+
+SERVICE_ID=VA70c638f9bfc30420ef24a3ae0f5ddfd3
+
+ACCOUNT_SID=ACdf4c5f1306c8c5b277cd584e6e0ca0e3
+AUTH_TOKEN=bfc739570cab58aaaa691f42ea411c89
