--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "parcel-bundler": "^1.12.4",
     "pug": "^3.0.0",
     "slugify": "^1.4.5",
-    "swiper": "^6.3.4"
+    "swiper": "^6.3.4",
+    "twilio": "^3.50.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
