--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.14",
     "parcel-bundler": "^1.12.4",
     "pug": "^3.0.0",
     "slugify": "^1.4.5",
