--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -26,7 +27,8 @@
     "pug": "^3.0.0",
     "slugify": "^1.4.5",
     "swiper": "^6.3.4",
-    "twilio": "^3.50.0"
+    "twilio": "^3.50.0",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
